# Grow

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  compile_commands.json  game.db  vcpkg.json
.github/: constants.env
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
assets/shaders/: angle_mag.fs  base.vs  blur.fs  border.fs  border_color.fs  crt.fs  dfx.fs  dfy.fs  dilatation.fs  gray.fs  health.fs  hysteresis.fs  noise.fs  non_maximum.fs  threshold.fs
assets/sprites/enemy/: arrow_hood.json  (+2 more)
assets/world/: caves.json  desert.json  plains.json
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  VCEnvironment.cmake
cmake/dependencies/: boost.cmake  raygui.cmake  raylib.cmake  sqlite.cmake  sqlite_orm.cmake  stb.cmake
configured_files/: config.hpp.in
diagrams/: core-class-diagram.puml
include/chroma/: sample_library.hpp
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  CMakeLists.txt  Main.cpp  main.cpp
src/app/commands/: CommandQueue.cpp  FunctionalCommand.cpp
src/app/database/: DatabaseManager.cpp
src/app/database/dao/: PlayerDAO.cpp  SettingsDAO.cpp
src/app/database/repositories/: SettingsRepository.cpp
src/app/events/: Event.cpp  EventCatcher.cpp  EventDispatcher.cpp  KeyEvent.cpp  MouseEvent.cpp
src/app/layers/: GameLayer.cpp  Layer.cpp  LayerStack.cpp
src/app/layers/game/: GameLayer.cpp  MainMenuLayer.cpp
src/app/layers/network/: NetworkLayer.cpp
src/app/layers/states/: GameState.cpp  State.cpp  StateMachine.cpp
src/app/layers/states/network/: NetworkLayer.cpp
src/app/settings/: PlayerDataManager.cpp  SettingsManager.cpp
src/app/states/: GameState.cpp  NetworkState.cpp  State.cpp  StateFactory.cpp  StateMachine.cpp
src/app/states/mediator/: GameNetworkMediator.cpp  RenderMediator.cpp
src/app/states/menu/: MainMenuState.cpp  OptionsMenuState.cpp  PauseState.cpp
src/app/states/network/: InterpolateSystem.cpp  NetworkState.cpp  PredictiveSyncSystem.cpp
src/client/: CMakeLists.txt  client.cpp  main.cpp  stb_rect_pack_impl.cpp
src/client/audio/: AudioEngine.cpp  AudioListener.cpp  MusicManager.cpp  SoundManager.cpp
src/client/core/: Application.cpp  Window.cpp
src/client/factory/: ShaderFactory.cpp
src/client/render/: Camera.cpp  RenderBridgeImpl.cpp  RenderQueue.cpp  RenderTarget.cpp  Renderer.cpp  SpriteRenderer.cpp  TextureAtlas.cpp  Window.cpp
src/client/render/animation/: AnimationController.cpp  AnimationRenderer.cpp  AnimationState.cpp
src/client/render/shader/: RenderPipeline.cpp  RenderShader.cpp
src/client/render/shader/shaders/: AngleMagPass.cpp  BlurPass.cpp  BorderColorPass.cpp  BorderPass.cpp  CrtPass.cpp  DerivateXPass.cpp  DerivativeYPass.cpp  DilatationPass.cpp  GrayPass.cpp  HealthPass.cpp  Hysteresis.cpp  NoisePass.cpp  NonMaximum.cpp  ThresHoldPass.cpp  ThresholdPass.cpp
src/client/ui/: UIContext.cpp  UIManager.cpp  UIManagerBus.cpp
src/client/ui/panels/: AudioOptionsPanel.cpp  MenuPanel.cpp  OptionsMenuPanel.cpp  Panel.cpp  PanelBuilder.cpp  PanelFactory.cpp  VideoOptionsPanel.cpp
src/client/ui/widgets/: BackGroundWidget.cpp  Button.cpp  LifeWidget.cpp  ShaderDebugWidget.cpp  SliderWidget.cpp  TextWidget.cpp  ToggleWidget.cpp  Widget.cpp  XpWidget.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  Server.cpp  WorldSimulation.cpp  server.cpp
src/server/core/: GameServer.cpp  ServerConfig.cpp  ServerCore.cpp  SessionManager.cpp
src/server/logic/: ServerEventSystem.cpp  ServerGameLogic.cpp  WaveManager.cpp
src/server/network/: NetworkValidator.cpp  PlayerSession.cpp  ServerNetwork.cpp  ServerPacketHandler.cpp
src/shared/: CMakeLists.txt  shared.cpp
src/shared/ai/: Astar.cpp
src/shared/audio/: AudioBridge.cpp
src/shared/collision/: CollisionManager.cpp  CollisionResponseResolver.cpp  Quadtree.cpp
src/shared/context/: GameContext.cpp  GameContextManager.cpp
src/shared/core/: GameObject.cpp  GameObjectManager.cpp
src/shared/core/components/: Attack.cpp  AudioListener.cpp  Bow.cpp  Camera.cpp  CharacterType.cpp  ColliderBox.cpp  Color.cpp  Coloring.cpp  Component.cpp  Fist.cpp  Health.cpp  Inventory.cpp  Item.cpp  Javelin.cpp  Movement.cpp  NIvel.cpp  ProjectileType.cpp  Run.cpp  Spear.cpp  Speed.cpp  Sprite.cpp  SpriteAnimation.cpp  Transform.cpp  Weapon.cpp  Whip.cpp
src/shared/core/components/enemy/: EnemyAI.cpp
src/shared/core/components/world/: ColliderBox.cpp  EventColliderBox.cpp  WorldNavigation.cpp  WorldRender.cpp  WorldSystem.cpp
src/shared/core/enemy/: Enemy.cpp
src/shared/core/player/: Player.cpp
src/shared/core/projectile/: Projectile.cpp
src/shared/core/world/: World.cpp  WorldGenerator.cpp  WorldSystem.cpp
src/shared/events/: AudioVolumeEvent.cpp  Event.cpp  EventBus.cpp  EventCatcher.cpp  EventDispatcher.cpp  InpuState.cpp  InputState.cpp  KeyEvent.cpp  MouseEvent.cpp  PlayerDataEvent.cpp  ProjectileEvent.cpp  SaveSettingsEvent.cpp  ShaderEvent.cpp  SoundEvent.cpp  Subscription.cpp
src/shared/events/layer/: LayerEvent.cpp  PopLayerEvent.cpp  PushLayerEvent.cpp
src/shared/events/state/: PopStateEvent.cpp  PushStateEvent.cpp  StateEvent.cpp
src/shared/events/ui/: ButtonClickEvent.cpp  PanelCloseEvent.cpp  PanelEvent.cpp  PanelOpenEvent.cpp
src/shared/factory/: GameObjectFactory.cpp  WeaponFactory.cpp
src/shared/packet/: ImputMessage.cpp  InputMessage.cpp  PacketHandler.cpp
src/shared/packet/adapter/: ComponentAdapter.cpp  WeaponAdapter.cpp
src/shared/packet/event/: InputEventMessage.cpp  ProjectileMesage.cpp
src/shared/render/: RenderBridge.cpp  SpriteLoader.cpp
src/shared/schemas/: GameObject.fbs  common.fbs  components.fbs  entities.fbs  events.fbs  game.fbs  messages.fbs
src/shared/utils/: UUID.cpp
(+222 files in other folders)
